src/test/deca/syntax/valid/created/parser/WithoutObjectExpressions/HelloBackslash.deca
// Description:
//  Affichage des caractères spéciaux.
{
    println("\\");
    println("\"");
}