src/test/deca/syntax/invalid/created/BackslashPrint.deca
// Description:
//    tests de programme incorrect syntaxiquement (mauvais argument dans println)
//
// Resultats:
//    ligne 7 : Erreur, symbole non reconnu
{
    println("\");
}